--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,13 @@
 platform = ststm32
 board = nucleo_f303k8
 framework = mbed
-#uild_flags = -D PIO_FRAMEWORK_MBED_RTOS_PRESENT 
+
+#[env:nucleo_f031k6]
+#platform = ststm32
+#board = nucleo_f031k6
+#board_build.mcu = stm32f031k6t6
+#framework = mbed
+
+#build_flags = -D PIO_FRAMEWORK_MBED_RTOS_PRESENT 
 #debug_tool = stlink
 
